--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,7 +105,7 @@ set(BOOST_DIR ${CONTRIB_BIN_SOURCE_DIR}/boost_1_52_0)
 set(XERCES_DIR ${CONTRIB_BIN_SOURCE_DIR}/xerces-c-3.1.1)
 set(GSL_DIR ${CONTRIB_BIN_SOURCE_DIR}/gsl-1.13)
 set(LIBSVM_DIR ${CONTRIB_BIN_SOURCE_DIR}/libsvm-3.12)
-set(SEQAN_DIR ${CONTRIB_BIN_SOURCE_DIR}/seqan-r13067)
+set(SEQAN_DIR ${CONTRIB_BIN_SOURCE_DIR}/seqan-1.4.1)
 set(GLPK_DIR ${CONTRIB_BIN_SOURCE_DIR}/glpk-4.46)
 set(COINOR_DIR ${CONTRIB_BIN_SOURCE_DIR}/CoinMP-1.3.3)
 set(EIGEN_DIR ${CONTRIB_BIN_SOURCE_DIR}/eigen-eigen-ffa86ffb5570)
@@ -149,9 +149,9 @@ set(ARCHIVE_LIBSVM libsvm-3.12.tar.gz)
 set(ARCHIVE_LIBSVM_TAR  libsvm-3.12.tar)
 set(ARCHIVE_LIBSVM_SHA1 "6ee77eb3d89af07fe48058dba0dcc24c85020b85")
 
-set(ARCHIVE_SEQAN seqan-r13067.tar.gz)
-set(ARCHIVE_SEQAN_TAR  seqan-r13067.tar)
-set(ARCHIVE_SEQAN_SHA1 "930ae10bb06e7599d500be2839f2079b8ba31688")
+set(ARCHIVE_SEQAN seqan-src-1.4.1.tar.gz)
+set(ARCHIVE_SEQAN_TAR  seqan-src-1.4.1.tar)
+set(ARCHIVE_SEQAN_SHA1 "3d4b15421e5375ac55555cd9c6546c343c324813")
 
 set(ARCHIVE_GLPK glpk-4.46.tar.gz)
 set(ARCHIVE_GLPK_TAR  glpk-4.46.tar)
