--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,7 +155,7 @@ set(GSL_DIR ${CONTRIB_BIN_SOURCE_DIR}/gsl-1.13)
 set(LIBSVM_DIR ${CONTRIB_BIN_SOURCE_DIR}/libsvm-3.12)
 set(SEQAN_DIR ${CONTRIB_BIN_SOURCE_DIR}/seqan-1.4.1)
 set(GLPK_DIR ${CONTRIB_BIN_SOURCE_DIR}/glpk-4.46)
-set(COINOR_DIR ${CONTRIB_BIN_SOURCE_DIR}/CoinMP-1.3.3)
+set(COINOR_DIR ${CONTRIB_BIN_SOURCE_DIR}/CoinMP-1.8.3)
 set(EIGEN_DIR ${CONTRIB_BIN_SOURCE_DIR}/eigen-eigen-ffa86ffb5570)
 set(WILDMAGIC_DIR ${CONTRIB_BIN_SOURCE_DIR}/WildMagic5)
 
@@ -205,9 +205,13 @@ set(ARCHIVE_GLPK glpk-4.46.tar.gz)
 set(ARCHIVE_GLPK_TAR  glpk-4.46.tar)
 set(ARCHIVE_GLPK_SHA1 "73d589452dc1d8d6a784b3f86f4268cae37420d7")
 
-set(ARCHIVE_COINOR CoinMP-1.3.3.tar.gz)
-set(ARCHIVE_COINOR_TAR  CoinMP-1.3.3.tar)
-set(ARCHIVE_COINOR_SHA1 "28d29dae6abf6cdef027dcfa4961bb10b7f540cb")
+#set(ARCHIVE_COINOR CoinMP-1.3.3.tar.gz)
+#set(ARCHIVE_COINOR_TAR  CoinMP-1.3.3.tar)
+#set(ARCHIVE_COINOR_SHA1 "28d29dae6abf6cdef027dcfa4961bb10b7f540cb")
+
+set(ARCHIVE_COINOR CoinMP-1.8.3.tar.gz)
+set(ARCHIVE_COINOR_TAR  CoinMP-1.8.3.tar)
+set(ARCHIVE_COINOR_SHA1 "e7831d46414f1c0067664dcfd6cea600043e489d")
 
 set(ARCHIVE_EIGEN eigen-3.2.0.tar.gz)
 set(ARCHIVE_EIGEN_TAR  eigen-3.2.0.tar)
@@ -366,11 +370,11 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     if( NOT (${CMAKE_SYSTEM_VERSION} LESS 13))
       ## OSX 10.9 when they switched to libc++ as standard
       message(STATUS "Be careful, since MacOS 10.9 Apple switched from libstdc++ to libc++ as standard library. Contrib needs to use the same as the OpenMS library.")
-      set( OSX_CXX_FLAGS "-stdlib=libstdc++ -m${OSX_DEPLOYMENT_TARGET_STRING}")
-      set( OSX_LINKER_FLAGS "-stdlib=libstdc++ -m${OSX_DEPLOYMENT_TARGET_STRING}")
+      ## -m${OSX_DEPLOYMENT_TARGET_STRING}
+      set( OSX_LIB_FLAG "-stdlib=libstdc++")
+      set( OSX_DEPLOYMENT_FLAG "-m${OSX_DEPLOYMENT_TARGET_STRING}")
     else()
-      set( OSX_CXX_FLAGS "-m${OSX_DEPLOYMENT_TARGET_STRING}")
-      set( OSX_LINKER_FLAGS "-m${OSX_DEPLOYMENT_TARGET_STRING}")
+      set( OSX_LIB_FLAG "-stdlib=libc++")
     endif()
   endif()
 
