Adapted package names according to renaming. Made sha1 more verbose.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,11 +189,11 @@ set(ARCHIVE_BOOST boost_1_61_0.tar.gz)
 set(ARCHIVE_BOOST_TAR  boost_1_61_0.tar)
 set(ARCHIVE_BOOST_SHA1 "2d2b80771f584f327827193fcf3abf836edcdfaa")
 
-set(ARCHIVE_XERCES xerces-c-3.1.1.tar.gz)
+set(ARCHIVE_XERCES xerces-c-3.1.1-vs15.tar.gz)
 set(ARCHIVE_XERCES_TAR  xerces-c-3.1.1.tar)
 set(ARCHIVE_XERCES_SHA1 "9ec2c6993a9c72b73b2819b2ad33856ad39089d9")
 
-set(ARCHIVE_GSL gsl-1.13.tar.gz)
+set(ARCHIVE_GSL gsl-1.13-vs15.tar.gz)
 set(ARCHIVE_GSL_TAR  gsl-1.13.tar)
 set(ARCHIVE_GSL_SHA1 "794da0fd7df668967368e2b8c8b391e41c58b276")
 
@@ -215,7 +215,7 @@ set(ARCHIVE_GLPK_SHA1 "73d589452dc1d8d6a784b3f86f4268cae37420d7")
 
 set(ARCHIVE_COINOR CoinMP-1.8.3.tar.gz)
 set(ARCHIVE_COINOR_TAR  CoinMP-1.8.3.tar)
-set(ARCHIVE_COINOR_SHA1 "3d4570d4b529009a628e51a7620863da6580c4d3")
+set(ARCHIVE_COINOR_SHA1 "e8b0e4e2fe8a0e3fa29744b9dfd7b1c5c0954451")
 
 set(ARCHIVE_EIGEN eigen-3.2.0.tar.gz)
 set(ARCHIVE_EIGEN_TAR  eigen-3.2.0.tar)
