Trying newer Xerces. Does not compile with gcc on Mac.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,7 +150,7 @@ set (PATCH_DIR "${PROJECT_SOURCE_DIR}/patches/" CACHE STRING "Directory containi
 set(BZIP2_DIR ${CONTRIB_BIN_SOURCE_DIR}/bzip2-1.0.5)
 set(ZLIB_DIR ${CONTRIB_BIN_SOURCE_DIR}/zlib-1.2.8)
 set(BOOST_DIR ${CONTRIB_BIN_SOURCE_DIR}/boost_1_61_0)
-set(XERCES_DIR ${CONTRIB_BIN_SOURCE_DIR}/xerces-c-3.1.1)
+set(XERCES_DIR ${CONTRIB_BIN_SOURCE_DIR}/xerces-c-3.1.4)
 set(LIBSVM_DIR ${CONTRIB_BIN_SOURCE_DIR}/libsvm-3.12)
 set(SEQAN_DIR ${CONTRIB_BIN_SOURCE_DIR}/seqan-1.4.1)
 set(GLPK_DIR ${CONTRIB_BIN_SOURCE_DIR}/glpk-4.46)
@@ -192,9 +192,9 @@ set(ARCHIVE_BOOST boost_1_61_0.tar.gz)
 set(ARCHIVE_BOOST_TAR  boost_1_61_0.tar)
 set(ARCHIVE_BOOST_SHA1 "2d2b80771f584f327827193fcf3abf836edcdfaa")
 
-set(ARCHIVE_XERCES xerces-c-3.1.1-vs15.tar.gz)
-set(ARCHIVE_XERCES_TAR  xerces-c-3.1.1.tar)
-set(ARCHIVE_XERCES_SHA1 "9ec2c6993a9c72b73b2819b2ad33856ad39089d9")
+set(ARCHIVE_XERCES xerces-c-3.1.4.tar.gz)
+set(ARCHIVE_XERCES_TAR  xerces-c-3.1.4.tar)
+set(ARCHIVE_XERCES_SHA1 "eb7711ba3c079f45a443238665a5e7d612fd1b0c")
 
 set(ARCHIVE_LIBSVM libsvm-3.12.tar.gz)
 set(ARCHIVE_LIBSVM_TAR  libsvm-3.12.tar)
