--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -274,7 +274,11 @@ if (MSVC)
   elseif (CMAKE_GENERATOR MATCHES ".*Visual Studio 14.*")
     set(TMP_MSVC_VERSION "14")
   else()
-    message(FATAL_ERROR "Please use 'Visual Studio ?? [Win64]' (??={8 2005, 9 2008, 10, 11, 12, 14}) as Generator - identical to the MSVC toolchain you plan to use for OpenMS! Note that you must not use NMake or alike for the contrib (nor for OpenMS). There will be errors (mostly missing libraries).")
+    if (OVERRIDE_GENERATOR)
+      message(FATAL_ERROR "Chosen to override the Generator check, proceed with caution.")
+    else()
+      message(FATAL_ERROR "Please use 'Visual Studio ?? [Win64]' (??={8 2005, 9 2008, 10, 11, 12, 14}) as Generator - identical to the MSVC toolchain you plan to use for OpenMS! Note that you must not use NMake or alike for the contrib (nor for OpenMS). There will be errors (mostly missing libraries). Under very special circumstances, you can override this with -DOVERRIDE_GENERATOR=On.")
+    endif()
   endif()
   set(CONTRIB_MSVC_VERSION ${TMP_MSVC_VERSION} CACHE INTERNAL "Microsoft Visual Studio Version used. Valid values: 8 and above")
   ## parameter validity check
