[BUILD] changed Boost version to 1.64, added Visual Studio 15 as a generator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ set (PATCH_DIR "${PROJECT_SOURCE_DIR}/patches/" CACHE STRING "Directory containi
 ## Warning: ensure these are all upper-case names!
 set(BZIP2_DIR ${CONTRIB_BIN_SOURCE_DIR}/bzip2-1.0.5)
 set(ZLIB_DIR ${CONTRIB_BIN_SOURCE_DIR}/zlib-1.2.8)
-set(BOOST_DIR ${CONTRIB_BIN_SOURCE_DIR}/boost_1_61_0)
+set(BOOST_DIR ${CONTRIB_BIN_SOURCE_DIR}/boost_1_64_0)
 set(XERCES_DIR ${CONTRIB_BIN_SOURCE_DIR}/xerces-c-3.1.1)
 set(LIBSVM_DIR ${CONTRIB_BIN_SOURCE_DIR}/libsvm-3.12)
 set(SEQAN_DIR ${CONTRIB_BIN_SOURCE_DIR}/seqan-1.4.1)
@@ -185,13 +185,13 @@ set(ARCHIVE_ZLIB zlib-1.2.8.tar.gz)
 set(ARCHIVE_ZLIB_TAR  zlib-1.2.8.tar)
 set(ARCHIVE_ZLIB_SHA1 "a4d316c404ff54ca545ea71a27af7dbc29817088")
 
-# set(ARCHIVE_BOOST boost_1_52_0.tar.gz)
-# set(ARCHIVE_BOOST_TAR  boost_1_52_0.tar)
-# set(ARCHIVE_BOOST_SHA1 "7cddbfd33fc99ed69343cd5cf8461648f8eae75a")
+# set(ARCHIVE_BOOST boost_1_61_0.tar.gz)
+# set(ARCHIVE_BOOST_TAR  boost_1_61_0.tar)
+# set(ARCHIVE_BOOST_SHA1 "2d2b80771f584f327827193fcf3abf836edcdfaa")
 
-set(ARCHIVE_BOOST boost_1_61_0.tar.gz)
-set(ARCHIVE_BOOST_TAR  boost_1_61_0.tar)
-set(ARCHIVE_BOOST_SHA1 "2d2b80771f584f327827193fcf3abf836edcdfaa")
+set(ARCHIVE_BOOST boost_1_64_0.tar.gz)
+set(ARCHIVE_BOOST_TAR  boost_1_64_0.tar)
+set(ARCHIVE_BOOST_SHA1 "6d983895e738e35b73c3a40b605080c4b64114e9")
 
 set(ARCHIVE_XERCES xerces-c-3.1.1-vs15.tar.gz)
 set(ARCHIVE_XERCES_TAR  xerces-c-3.1.1.tar)
@@ -273,8 +273,10 @@ if (MSVC)
     set(TMP_MSVC_VERSION "12")
   elseif (CMAKE_GENERATOR MATCHES ".*Visual Studio 14.*")
     set(TMP_MSVC_VERSION "14")
+  elseif (CMAKE_GENERATOR MATCHES ".*Visual Studio 15.*")
+    set(TMP_MSVC_VERSION "15")
   else()
-    message(FATAL_ERROR "Please use 'Visual Studio ?? [Win64]' (??={8 2005, 9 2008, 10, 11, 12, 14}) as Generator - identical to the MSVC toolchain you plan to use for OpenMS! Note that you must not use NMake or alike for the contrib (nor for OpenMS). There will be errors (mostly missing libraries).")
+    message(FATAL_ERROR "Please use 'Visual Studio ?? [Win64]' (??={8 2005, 9 2008, 10, 11, 12, 14, 15}) as Generator - identical to the MSVC toolchain you plan to use for OpenMS! Note that you must not use NMake or alike for the contrib (nor for OpenMS). There will be errors (mostly missing libraries).")
   endif()
   set(CONTRIB_MSVC_VERSION ${TMP_MSVC_VERSION} CACHE INTERNAL "Microsoft Visual Studio Version used. Valid values: 8 and above")
   ## parameter validity check
