--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,9 +196,9 @@ set(ARCHIVE_BOOST boost_1_64_0.tar.gz)
 set(ARCHIVE_BOOST_TAR  boost_1_64_0.tar)
 set(ARCHIVE_BOOST_SHA1 "6d983895e738e35b73c3a40b605080c4b64114e9")
 
-set(ARCHIVE_XERCES xerces-c-3.1.1-vs15.tar.gz)
+set(ARCHIVE_XERCES xerces-c-3.1.1-vs17.tar.gz)
 set(ARCHIVE_XERCES_TAR  xerces-c-3.1.1.tar)
-set(ARCHIVE_XERCES_SHA1 "9ec2c6993a9c72b73b2819b2ad33856ad39089d9")
+set(ARCHIVE_XERCES_SHA1 "c57cbb280e3601c77c46bc3215ec86c62ed8c2e6")
  
 set(ARCHIVE_LIBSVM libsvm-3.12.tar.gz)
 set(ARCHIVE_LIBSVM_TAR  libsvm-3.12.tar)
@@ -216,19 +216,17 @@ set(ARCHIVE_GLPK_SHA1 "73d589452dc1d8d6a784b3f86f4268cae37420d7")
 #set(ARCHIVE_COINOR_TAR  CoinMP-1.3.3.tar)
 #set(ARCHIVE_COINOR_SHA1 "28d29dae6abf6cdef027dcfa4961bb10b7f540cb")
 
-set(ARCHIVE_COINOR CoinMP-1.8.3.tar.gz)
+set(ARCHIVE_COINOR CoinMP-1.8.3-vs17.tar.gz)
 set(ARCHIVE_COINOR_TAR  CoinMP-1.8.3.tar)
-set(ARCHIVE_COINOR_SHA1 "e8b0e4e2fe8a0e3fa29744b9dfd7b1c5c0954451")
+set(ARCHIVE_COINOR_SHA1 "d1d409f4e7d7cbcb46e5746266135f54c7b908a3")
 
 set(ARCHIVE_EIGEN eigen-3.2.10.tar.gz)
 set(ARCHIVE_EIGEN_TAR  eigen-3.2.10.tar)
 set(ARCHIVE_EIGEN_SHA1 "bb1d964f1fb11d6ae173010f33b971f93a631144")
 
-
 set(ARCHIVE_KISSFFT kissfft-130.tar.gz)
 set(ARCHIVE_KISSFFT_TAR kissfft-130.tar)
 set(ARCHIVE_KISSFFT_SHA1 "14ee3bd4a6480dc7fbec9a6d3a16d5d9fbbfc0fb")
-
 
 set(ARCHIVE_WILDMAGIC WildMagic5.tar.gz)
 set(ARCHIVE_WILDMAGIC_TAR  WildMagic5.tar)
